# CS3101-E-Commerce-App-in-C

./: CMakeLists.txt  Makefile  README.md  ascii_art.c  auth.c  babychatbot  bill_1.tex  bm25neogtk  cart.c  database.c  database.h  db_init.c  ecommerce.db  latex_bill.c  main  main.c  masterchatbot  menu.c  menu2.c  other_functions.c  search_bk.c  tokenizer.c  words.txt
Context for Chatbot/:  Can users add products to a wishlist?   How are carts managed?  Can the system generate bills?  Can users save multiple addresses?  Does the system support product reviews?  Hi, how are you?  How are admin IDs generated dynamically in the database?  How are admin users managed?  How are delivery vans tracked in the database?  How are payments managed?  How are product categories organized?  How are search results sorted in the application?  How are terms tokenized in the documents?  How are user searches logged in the database?  How does the application handle folder selection for indexing?  How does the database ensure address entries are associated with valid users?  How does the display_search_results function work?  How does the system ensure database integrity?  How does the system handle product information?  Question: How does the database handle coupon discounts?  Question: What information does the orders table capture?  What data does the products table store?  What does the GTK interface facilitate in this application?  What happens in the index_documents function?  What happens when an order is delayed?  What is the purpose of the calculate_bm25_scores function?  What is the purpose of the delivery_vans table?  What is the purpose of the orders table?  What is the purpose of the reviews table?  What is the purpose of the to_lower function in the code?  What is the purpose of the users table in the database schema?  What is the purpose of the users table?  What is the role of the calculate_idf_values function?  What is the role of the cart table?  What is the role of the coupons table?  What is the significance of the perform_search function?  What is this project about?  What security measures are in place for the database?
chatbot/: bm25_terminal.c  chatbot-gtk-final.c  chatbot-gtk-only.c
old_gtk_qt_stuff/gtk_stuff/Version_1.0.0-auth_done/: CMakeLists.txt  gtk4-auth-app
old_gtk_qt_stuff/gtk_stuff/Version_1.0.0-auth_done/resources/: style.css
old_gtk_qt_stuff/gtk_stuff/Version_1.0.0-auth_done/src/: app.c  main.c  ui.c  ui.c_old
old_gtk_qt_stuff/gtk_stuff/Version_1.0.0-auth_done/src/headers/: ui.h
old_gtk_qt_stuff/gtk_stuff/Version_1.0.1-failed/resources/: style.css
old_gtk_qt_stuff/gtk_stuff/Version_1.0.1-failed/src/: app.c  auth.c  database.c  main.c  ui.c
old_gtk_qt_stuff/gtk_stuff/Version_1.0.2/: CMakeLists.txt
old_gtk_qt_stuff/gtk_stuff/Version_1.0.2/resources/: resources.xml  style.css
old_gtk_qt_stuff/gtk_stuff/Version_1.0.2/src/: auth.c  database.c  splash.c
old_gtk_qt_stuff/qt_stuff_discarded/: qt_auth  user_auth.db
old_gtk_qt_stuff/qt_stuff_discarded/Sample_codes_for_learning/GLINO.EXE/: Dino_game.cpp
old_gtk_qt_stuff/qt_stuff_discarded/old_test_no_longer_needed/: CMakeLists.txt
old_gtk_qt_stuff/qt_stuff_discarded/old_test_no_longer_needed/include/: MainWindow.h
old_gtk_qt_stuff/qt_stuff_discarded/old_test_no_longer_needed/src/: MainWindow.cpp  main.cpp
old_gtk_qt_stuff/qt_stuff_discarded/qt_test/test/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+8 files in other folders)
